--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
         <tbody>
           <tr>
             <td><a href="#Pinch">Pinch Pots</a></td>
-            <td><a href="#Tool">Using Tools + Texture</a></td>
+            <td><a href="#Tool">Using Tools</a></td>
             <td><a href="#Slip">Slip Trailing</a></td>
           </tr>
           <tr>
             <td><a href="#Coil">Coil Construction</a></td>
-            <td><a href="#Hump">Throwing Off The Hump</a></td>
+            <td><a href="#Hump">Throwing Off the Hump</a></td>
             <td><a href="#Cast">Slip Casting</a></td>
           </tr>
           <tr>
             <td><a href="#Slab">Slab Construction</a></td>
-            <td><a href="#Mixing">Damascus Clay + Mason Stains</a></td>
+            <td><a href="#Mixing">Damascus Clay & Mason Stains</a></td>
             <td><a href="#Mold">Sprig Mold</a></td>
           </tr>
         </tbody>
@@ -147,7 +147,7 @@
         <h2 class="separator" id="Wheel_Throwing">Wheel Throwing</h2>
         </div>
 
-      <h3 id="Tool">Using Tools + Texture</h3>
+      <h3 id="Tool">Using Tools</h3>
 
       <br>
 
@@ -159,7 +159,7 @@
 
       <br>
 
-      <h3 id="Hump">Throwing Off The Hump</h3>
+      <h3 id="Hump">Throwing Off the Hump</h3>
 
       <br>
 
@@ -171,11 +171,11 @@
 
       <br>
 
-      <h3 id="Mixing">Damascus Clay + Mason Stains</h3>
+      <h3 id="Mixing">Damascus Clay & Mason Stains</h3>
 
       <br>
 
-      <p>The Damascus/marbled clay look is achieved by <strong>mixing</strong> mason stains into plain clay and then layering those stained clays with regular unstained clays. An alternate way to achieve the same effect would be to mix terracotta clay with grey stoneware. Whenever working with mason-stained clay or terracotta and stoneware, make sure no <em>cross-contamination</em> of the sources occurs. Do not put the different colors or clays into the same place for reconstitution or pugging. After one throws the marbled clay, use a rib, modeling tool, wire cutter, or sponge to wipe away the homogenous surface, revealing the layering hidden beneath the surface.</p>
+      <p>The damascus/marbled clay look is achieved by <strong>mixing</strong> mason stains into plain clay and then layering those stained clays with regular unstained clays. An alternate way to achieve the same effect would be to mix terracotta clay with grey stoneware. Whenever working with mason-stained clay or terracotta and stoneware, make sure no <em>cross-contamination</em> of the sources occurs. Do not put the different colors or clays into the same place for reconstitution or pugging. After one throws the marbled clay, use a rib, modeling tool, wire cutter, or sponge to wipe away the homogenous surface, revealing the layering hidden beneath the surface.</p>
 
       <br>
 
